Bug 477512 - Custom emoji in backticks sends HTML img tag
Summary: Custom emoji in backticks sends HTML img tag
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: 23.08.3
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-25 17:28 UTC by tedster3
Modified: 2023-12-09 20:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot showing the problem of sending custom emoji in backticks (22.96 KB, image/png)
2023-11-25 17:28 UTC, tedster3
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tedster3 2023-11-25 17:28:18 UTC
Created attachment 163475 [details]
Screenshot showing the problem of sending custom emoji in backticks

SUMMARY
When sending a shortcode for a custom emoji within backticks for code formatting, NeoChat literally sends the HTML <img> tag. 


STEPS TO REPRODUCE
1. Create a custom emoji with a shortcode, e.g.: :custom_emoji:
2. Enter the following in the "Send a message..." field: `:custom_emoji:`
3. Send the message

OBSERVED RESULT
The following message is sent (with code/monospace formatting):
<img data-mx-emoticon="" src="mxc://example.com/qboavWktsdUCfzAFyOvDpBoR" alt=":custom_emoji:" title=":custom_emoji:" height="32" vertical-align="middle" />

EXPECTED RESULT
The custom emoji shortcode is sent with code formatting. i.e.:
:custom_emoji:

SOFTWARE/OS VERSIONS
Windows: -
macOS: -
Linux/KDE Plasma: Fedora Linux 39 (KDE Plasma Desktop Spin)
(available in About System)
KDE Plasma Version: 5.27.9
KDE Frameworks Version: 5.111.0
Qt Version: 5.15.11

ADDITIONAL INFORMATION
The attached image shows the issue.
Comment 1 James Graham 2023-12-08 13:56:34 UTC
Indeed the text should be left alone when within a code block
Comment 2 Bug Janitor Service 2023-12-08 18:27:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1475
Comment 3 James Graham 2023-12-09 14:28:04 UTC
Git commit d25340bc31c63e9ec26312709f11c26c5234d78b by James Graham.
Committed on 09/12/2023 at 15:28.
Pushed by nvrwhere into branch 'master'.

Fix inline custom emojis in codeblocks

Make sure that custom emojis in inline code blocks are not turned into images.

By calling preprocess text in `texthandler` the whole function can be simplified as it will now never be called on any text inside any code block (which was the reason for all the split stuff previously).

M  +46   -0    autotests/texthandlertest.cpp
M  +0    -2    src/actionshandler.cpp
M  +6    -14   src/models/customemojimodel.cpp
M  +1    -1    src/models/customemojimodel.h
M  +11   -2    src/texthandler.cpp

https://invent.kde.org/network/neochat/-/commit/d25340bc31c63e9ec26312709f11c26c5234d78b
Comment 4 tedster3 2023-12-09 20:04:13 UTC
Confirmed to be working with the latest master as of this writing (1d8ffb22ee777474cceccba6f95f6a50a1672647).